# dmmaskstat

./: Makefile  configure  configure.ac  dmmaskstat.c  dmmaskstat.par  dmmaskstat.t  dmmaskstat.xml  t_dmmaskstat.c
src/: Makefile.am  Makefile.in  dmmaskstat.c  dmmaskstat.par
test/: Makefile.am  Makefile.in  dmmaskstat.t
test/save_data/dmmaskstat/: #tolerance#  test_simple.fits  tolerance
wrapper/: Makefile.am  Makefile.in
